@@ -20,7 +20,7 @@ linux-8bsg.scandir=/home/edward/filestoimport
 linux-8bsg.scanbusiness=Magento
 linux-8bsg.groovydir=/home/edward/ideaprojects/Toto/DatabaseServer/Groovy/
 #this one is hacky I know . . .
-linux-8bsg.scanparams=Import Template|risk RT,risk allrisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
+linux-8bsg.scanparams=importtemplate|Risk Azquo Import Templates.xlsx|importversion|RT,AllRisksClaim,AllRisksPremium1,AllRisksPremium,AllRisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
 linux-8bsg.patchfilessource=/home/edward/patchfiles
 linux-8bsg.logonpageoverride=edbroking_login
 linux-8bsg.logonpagecolour=#eded24
@@ -58,7 +58,7 @@ gzksd-azq01.patchfilessource=/home/CawleyE/patchfiles
 gzksd-azq01.scandir=/home/CawleyE/filestoimport
 gzksd-azq01.scanbusiness=Ed Broking
 #this one is hacky I know . . .
-gzksd-azq01.scanparams=Import Template|risk RT,risk allrisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
+gzksd-azq01.scanparams=importtemplate|Risk Azquo Import Templates.xlsx|importversion|RT,AllRisksClaim,AllRisksPremium1,AllRisksPremium,AllRisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
 gzksd-azq01.logonpageoverride=edbroking_login
 gzksd-azq01.logonpagecolour=#241bed
 gzksd-azq01.logonpagemessage=<br/><b>DEV - may be updated at any time</b>
@@ -74,7 +74,7 @@ gzksu-azq01.patchfilessource=/home/CawleyE/patchfiles
 gzksu-azq01.scandir=/home/CawleyE/filestoimport
 gzksu-azq01.scanbusiness=Ed Broking
 #this one is hacky I know . . .
-gzksu-azq01.scanparams=Import Template|risk RT,risk allrisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
+gzksu-azq01.scanparams=importtemplate|Risk Azquo Import Templates.xlsx|importversion|RT,AllRisksClaim,AllRisksPremium1,AllRisksPremium,AllRisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
 gzksu-azq01.logonpageoverride=edbroking_login
 gzksu-azq01.logonpagecolour=#eded24
 gzksu-azq01.logonpagemessage=<br/><b>UAT System</b>
@@ -87,7 +87,7 @@ gzksp-azq01.patchfilessource=/home/CawleyE/patchfiles
 gzksp-azq01.scandir=/home/CawleyE/filestoimport
 gzksp-azq01.scanbusiness=Ed Broking
 #this one is hacky I know . . .
-gzksp-azq01.scanparams=Import Template|risk RT,risk allrisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
+gzksp-azq01.scanparams=importtemplate|Risk Azquo Import Templates.xlsx|importversion|RT,AllRisksClaim,AllRisksPremium1,AllRisksPremium,AllRisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18|contract reference|BB304150
 gzksp-azq01.logonpageoverride=edbroking_login
 gzksp-azq01.logonpagecolour=#ed1b24
 gzksp-azq01.logonpagemessage=
